--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
 <section class="container block_01">
     <div class="row align-items-center">
         <div class="col-md-6 order-md-1 order-2">
-            <h2 data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">サービスを支えるR&D (技術研究開発)</h2>
+            <h2 data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">To be the leading support digital transformation technology firm</h2>
             <div class="desc" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
-                <p>NTQは技術に高い関心を持っています。CRAZY TEAMと呼ばれるR&D（技術研究開発）専門のチームを抱え、提供する3つのサービスを支えています。</p>
-                <p>将来を見通した技術に精通することで地盤から技術を固め、来るべき日に備え、お客様の思いの実現のために尽力します。</p>
+                <p>技術投資コストやハイテク労働者の不足に直面する時代にNETKO Solution は企業向けの情報技術サービス及びソリューションを提供する開発会社です。人材リーソン ・ テクノロジー ・ビジネスプロセスなどの強みで、
+                    NETKO Solutionはデジタルトランスフォーメーション(DX)の時代に貴社が「変換」するのを支え、信頼できるパートナーです。</p>
             </div>
             <a href="#" class="btn btn-secondary" data-aos="fade-up" data-aos-delay="600" data-aos-duration="600">Company</a>
         </div>
@@ -145,8 +145,9 @@
 
 <section class="block_02">
     <div class="container">
-        <div class="block-title" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">ベトナム開発拠点のご紹介</div>
-        <p class="desc" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">NTQは技術に高い関心を持っています。CRAZY TEAMと呼ばれるR&D（技術研究開発）専門のチームを抱え、提供する3つのサービスを支えています。 将来を見通した技術に精通することで地盤から技術を固め、来るべき日に備え、お客様の思いの実現のために尽力します。</p>
+        <div class="block-title" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">サービス</div>
+        <p class="desc" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">ビジネス環境及び日本人についての理解と柔軟な作業プロセス(Agile)を持つ専門家チームの経験の組み合わせにより、
+        </br>NETKO Solutionは高品質な商品及びお客様のサービス経験を満足させます。</p>
         <div class="item-box">
             <div class="item" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
                 <i class="icon">
@@ -160,8 +161,9 @@
                         <path d="M35.0748 30.4068L33.9252 28.0934C31.7704 29.1632 29.957 30.8134 28.6893 32.8581C27.4217 34.9028 26.75 37.2609 26.75 39.6667C26.75 42.0725 27.4217 44.4305 28.6893 46.4752C29.957 48.5199 31.7704 50.1701 33.9252 51.2399L35.0748 48.9266C33.3506 48.0707 31.8996 46.7504 30.8852 45.1144C29.8708 43.4784 29.3333 41.5916 29.3333 39.6667C29.3333 37.7417 29.8708 35.855 30.8852 34.219C31.8996 32.583 33.3506 31.2627 35.0748 30.4068Z" fill="#7DB548"/>
                     </svg>
                 </i>
-                <div class="title">新しいサービスを開発したい</div>
-                <div class="item-desc">お客様のご要望に応じて、システム開発、ITツールの導入支援から、運用者様のリテラシー教育まで幅広く業務効率化を支援いたします。</div>
+                <div class="title">ソフトウェア開発</div>
+                <div class="item-desc">相手の会社のビジネス成長を支援することを究極の目標として、
+                    お客様のご要望にお応えするソフトウェア開発サービスをご提供しております。</div>
             </div>
             <div class="item" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
                 <i class="icon">
@@ -176,8 +178,8 @@
                         <path d="M79.0947 51.441L76.1157 51.1019C75.8857 50.3996 75.595 49.7093 75.2439 49.0433L76.9876 46.573C77.3388 46.1008 77.2783 45.4347 76.8665 45.023L73.3911 41.5598C72.9552 41.1238 72.265 41.0754 71.7805 41.4629L69.4435 43.3398C68.7775 43.0007 68.0872 42.7222 67.3728 42.5043L66.8763 39.5133C66.7794 38.932 66.2708 38.5082 65.6775 38.5082H60.7732C60.1556 38.5082 59.6349 38.9683 59.5622 39.5859L59.2353 42.5769C58.5208 42.807 57.8427 43.0976 57.1888 43.4367L54.7064 41.6808C54.222 41.3417 53.5681 41.3902 53.1563 41.814L49.6931 45.2773C49.2572 45.7133 49.2208 46.4035 49.6083 46.8879L51.4732 49.2371C51.1341 49.9031 50.8556 50.5933 50.6376 51.3078L47.6587 51.8042C47.0775 51.9133 46.6415 52.4097 46.6415 53.0031V57.9074C46.6415 58.5249 47.1138 59.0336 47.7192 59.1062L50.6982 59.4453C50.9282 60.1598 51.231 60.85 51.57 61.5039L49.8263 63.9621C49.4872 64.4464 49.5356 65.1003 49.9595 65.5242L53.4228 68.9875C53.8587 69.4234 54.5489 69.4597 55.0334 69.0722L57.3826 67.2074C58.0486 67.5343 58.7267 67.8129 59.4411 68.0308L59.9376 71.0218C60.0345 71.6152 60.5431 72.039 61.1364 72.039H62.2021V74.7152H21.2118C20.5458 74.7152 20.0009 75.2601 20.0009 75.9261C20.0009 76.1137 20.0009 84.2349 20.0009 83.9304C20.0009 86.5823 22.1685 88.75 24.8204 88.75H59.7923C62.4563 88.75 64.6239 86.5823 64.6239 83.9304C64.6239 83.3384 64.6239 71.4532 64.6239 72.039H66.0407C66.6583 72.039 67.179 71.5789 67.2517 70.9613L67.5908 67.9703C68.293 67.7402 68.9833 67.4496 69.6372 67.1105L72.1075 68.8663C72.5919 69.2054 73.2458 69.1449 73.6696 68.7331L77.1208 65.2577C77.5568 64.8218 77.593 64.1316 77.2056 63.6594L75.3407 61.3102C75.6798 60.632 75.9583 59.9418 76.1763 59.2394L79.1552 58.7309C79.7364 58.634 80.1723 58.1254 80.1723 57.5441V52.6398C80.1724 52.0222 79.7122 51.5015 79.0947 51.441ZM62.2021 83.9304C62.2021 85.2503 61.1243 86.3281 59.7923 86.3281H24.8205C23.5005 86.3281 22.4228 85.2503 22.4228 83.9304C22.4228 83.6704 22.4228 77.0127 22.4228 77.137H62.2021V83.9304H62.2021ZM77.7505 56.5148L75.0138 56.975C74.5294 57.0597 74.154 57.4109 74.033 57.8953C73.7908 58.9124 73.3911 59.8933 72.8583 60.8257C72.604 61.2495 72.6404 61.7945 72.9552 62.182L74.6384 64.3132L72.6766 66.2992L70.4002 64.6765C70.0126 64.398 69.4798 64.3859 69.0681 64.6402C68.1841 65.1851 67.2154 65.5968 66.186 65.8512C65.6896 65.9722 65.3263 66.396 65.2657 66.8926L64.963 69.6172C63.9428 69.6172 63.1744 69.6172 62.1536 69.6172L61.6935 66.8683C61.6209 66.396 61.2575 66.0085 60.7853 65.8996C59.7681 65.6453 58.7872 65.2457 57.879 64.7129C57.4431 64.4586 56.8982 64.4949 56.5107 64.8097L54.3673 66.505L52.3935 64.5312L53.9919 62.291C54.2494 61.9261 54.2952 61.3879 54.0404 60.9348C53.4955 60.0507 53.0716 59.0699 52.8052 58.0285C52.6841 57.5441 52.2724 57.1808 51.7759 57.1324L49.0634 56.8175V54.0324L51.8001 53.5722C52.2845 53.4875 52.672 53.1242 52.781 52.6519C53.0232 51.6226 53.4228 50.6418 53.9677 49.7456C54.222 49.3097 54.1978 48.7648 53.8829 48.3652L52.1755 46.2218L54.1493 44.248L56.4138 45.8586C56.8013 46.1371 57.3341 46.1613 57.7458 45.907C58.6298 45.3621 59.6107 44.9504 60.652 44.6839C61.1364 44.5629 61.4876 44.1511 61.5481 43.6547L61.8509 40.9301H64.6602L65.1204 43.6668C65.2052 44.1511 65.5564 44.5386 66.0286 44.6476C67.058 44.8898 68.0388 45.2894 68.947 45.8343C69.3829 46.0887 69.9279 46.0523 70.3154 45.7374L72.4465 44.0301L74.4204 46.016L72.822 48.2683C72.5679 48.6282 72.5157 49.1541 72.7735 49.6125C73.3306 50.5207 73.7423 51.5015 73.9966 52.5066C74.1176 52.9909 74.5294 53.3543 75.038 53.4148L77.7505 53.7176V56.5148H77.7505Z" fill="white"/>
                     </svg>
                 </i>
-                <div class="title">新しいサービスを開発したい</div>
-                <div class="item-desc">お客様のご要望に応じて、システム開発、ITツールの導入支援から、運用者様のリテラシー教育まで幅広く業務効率化を支援いたします。</div>
+                <div class="title">モバイルアプリ開発</div>
+                <div class="item-desc">モバイルアプリ開発成功例は多くないですが、IOS及びAndroidのアプリ開発に長年の経験を持つエンジニアで構成されます。</div>
             </div>
             <div class="item" data-aos="fade-up" data-aos-delay="600" data-aos-duration="600">
                 <i class="icon">
@@ -185,8 +187,9 @@
                         <path d="M74.9199 11.6283L71.4232 15.125H66.7917C66.4491 15.125 66.1206 15.2611 65.8783 15.5033C65.6361 15.7456 65.5 16.0741 65.5 16.4167V21.0482L61.0899 25.4583H56.4583C56.1158 25.4584 55.7872 25.5944 55.545 25.8367C55.3028 26.0789 55.1667 26.4074 55.1667 26.75V31.3815L50.7565 35.7917H46.125C45.7824 35.7917 45.4539 35.9278 45.2117 36.17C44.9694 36.4122 44.8333 36.7408 44.8333 37.0833V41.7149L39.1317 47.4167H34.7154C35.0726 45.2808 35.875 43.2439 37.0705 41.4383C38.266 39.6327 39.8279 38.0987 41.6548 36.9359L40.2619 34.7603C36.9664 36.8667 34.4425 39.9846 33.0688 43.6466C31.6951 47.3086 31.5456 51.3172 32.6427 55.0713C33.7398 58.8254 36.0243 62.1227 39.1538 64.4687C42.2832 66.8147 46.0889 68.083 50 68.0833H66.5903C62.0625 72.2351 56.1432 74.5394 50 74.5417C36.4676 74.5417 25.4583 63.5324 25.4583 50H22.875C22.8743 52.1763 23.1358 54.3447 23.6539 56.4583H13.8333V43.5417H24.1667C24.4221 43.5417 24.6718 43.4659 24.8842 43.324C25.0966 43.182 25.2622 42.9803 25.3599 42.7443L27.4463 37.7074C27.5441 37.4714 27.5697 37.2117 27.5199 36.9611C27.47 36.7105 27.347 36.4804 27.1664 36.2997L19.8595 28.9931L28.9931 19.8595L36.2997 27.1664C36.4803 27.3471 36.7105 27.4701 36.9611 27.52C37.2117 27.5698 37.4714 27.5441 37.7074 27.4463L42.7443 25.3599C42.9803 25.2622 43.182 25.0966 43.324 24.8842C43.4659 24.6718 43.5417 24.4221 43.5417 24.1667V13.8333H56.4583V21.5833H59.0417V12.5417C59.0416 12.1991 58.9056 11.8706 58.6633 11.6283C58.4211 11.3861 58.0926 11.25 57.75 11.25H42.25C41.9074 11.25 41.5789 11.3861 41.3367 11.6283C41.0944 11.8706 40.9583 12.1991 40.9583 12.5417V23.3036L37.5161 24.7294L29.9065 17.1194C29.6642 16.8772 29.3356 16.7412 28.9931 16.7412C28.6505 16.7412 28.3219 16.8772 28.0797 17.1194L17.1194 28.0797C16.8772 28.3219 16.7412 28.6505 16.7412 28.9931C16.7412 29.3356 16.8772 29.6642 17.1194 29.9065L24.7294 37.5161L23.3036 40.9583H12.5417C12.1991 40.9583 11.8706 41.0944 11.6283 41.3367C11.3861 41.5789 11.25 41.9074 11.25 42.25V57.75C11.25 58.0926 11.3861 58.4211 11.6283 58.6633C11.8706 58.9056 12.1991 59.0416 12.5417 59.0417H23.3036L24.7294 62.4838L17.1194 70.0935C16.8772 70.3358 16.7412 70.6643 16.7412 71.0069C16.7412 71.3495 16.8772 71.6781 17.1194 71.9203L28.0797 82.8806C28.3219 83.1228 28.6505 83.2588 28.9931 83.2588C29.3356 83.2588 29.6642 83.1228 29.9065 82.8806L37.5161 75.2706L40.9583 76.6964V87.4583C40.9583 87.8009 41.0944 88.1294 41.3367 88.3717C41.5789 88.6139 41.9074 88.75 42.25 88.75H57.75C58.0926 88.75 58.4211 88.6139 58.6633 88.3717C58.9056 88.1294 59.0416 87.8009 59.0417 87.4583V76.6964L62.4838 75.2706L70.0935 82.8806C70.3358 83.1228 70.6643 83.2588 71.0069 83.2588C71.3495 83.2588 71.6781 83.1228 71.9203 82.8806L82.8806 71.9203C83.1228 71.6781 83.2589 71.3495 83.2588 71.0069C83.2588 70.6643 83.1227 70.3358 82.8804 70.0935L80.8702 68.0833H87.4583C87.8009 68.0833 88.1294 67.9472 88.3717 67.705C88.6139 67.4628 88.75 67.1342 88.75 66.7917V22.875C88.75 22.5324 88.6139 22.2039 88.3717 21.9617C88.1294 21.7194 87.8009 21.5834 87.4583 21.5833H77.125C76.7824 21.5834 76.4539 21.7194 76.2117 21.9617C75.9694 22.2039 75.8333 22.5324 75.8333 22.875V31.9167H66.7917C66.4491 31.9167 66.1206 32.0528 65.8783 32.295C65.6361 32.5372 65.5 32.8658 65.5 33.2083V39.6667H56.4583C56.1158 39.6667 55.7872 39.8028 55.545 40.045C55.3028 40.2872 55.1667 40.6158 55.1667 40.9583V48.7083H46.125C45.7824 48.7083 45.4539 48.8444 45.2117 49.0867C44.9694 49.3289 44.8333 49.6574 44.8333 50V55.1667H35.3866C34.7985 53.5076 34.4987 51.7602 34.5 50H39.6667C40.0092 50 40.3378 49.8639 40.5801 49.6217L46.6601 43.5417H51.2917C51.6342 43.5416 51.9628 43.4056 52.205 43.1633C52.4472 42.9211 52.5833 42.5926 52.5833 42.25V37.6185L56.9935 33.2083H61.625C61.9676 33.2083 62.2961 33.0722 62.5383 32.83C62.7806 32.5878 62.9166 32.2592 62.9167 31.9167V27.2851L67.3268 22.875H71.9583C72.3009 22.875 72.6294 22.7389 72.8717 22.4967C73.1139 22.2544 73.25 21.9259 73.25 21.5833V16.9518L76.3683 13.8333H88.75V11.25H75.8333C75.4908 11.25 75.1622 11.3861 74.9199 11.6283ZM28.9931 80.1405L19.8595 71.0069L26.8093 64.0574C29.0804 67.7878 32.2122 70.9196 35.9426 73.1907L28.9931 80.1405ZM43.5417 86.1667V76.346C47.7846 77.3855 52.2158 77.3846 56.4583 76.3436V86.1667H43.5417ZM80.1405 71.0069L71.0069 80.1405L64.059 73.1924C66.3524 71.8029 68.4272 70.0812 70.2156 68.0833H77.2168L80.1405 71.0069ZM78.4167 24.1667H86.1667V65.5H78.4167V24.1667ZM68.0833 34.5H75.8333V65.5H68.0833V34.5ZM57.75 42.25H65.5V65.5H57.75V42.25ZM47.4167 51.2917H55.1667V65.5H50C49.1344 65.4999 48.2702 65.4275 47.4167 65.2835V51.2917ZM44.8333 57.75V64.6134C41.3565 63.375 38.4321 60.9429 36.5807 57.75H44.8333ZM50 40.9583H47.4167V38.375H50V40.9583ZM60.3333 30.625H57.75V28.0417H60.3333V30.625ZM70.6667 20.2917H68.0833V17.7083H70.6667V20.2917Z" fill="white"/>
                     </svg>
                 </i>
-                <div class="title">新しいサービスを開発したい</div>
-                <div class="item-desc">お客様のご要望に応じて、システム開発、ITツールの導入支援から、運用者様のリテラシー教育まで幅広く業務効率化を支援いたします。</div>
+                <div class="title">ウェブ開発</div>
+                <div class="item-desc">ご要望にお応えするウェブ開発サービスがNETKOの強みです。
+                    様々な規模のプロジェクトを成功させた実績を積んで、客様から信用を勝ち取って、 100% のお客様にリピートしていただいています。</div>
             </div>
             <div class="item" data-aos="fade-up" data-aos-delay="800" data-aos-duration="600">
                 <i class="icon">
@@ -212,8 +215,8 @@
                         <path d="M55.8272 49.4514C53.7908 49.4514 52.1349 51.1073 52.1349 53.1437C52.1349 55.1794 53.7908 56.8359 55.8272 56.8359C57.8629 56.8359 59.5194 55.1794 59.5194 53.1437C59.5194 51.108 57.8629 49.4514 55.8272 49.4514ZM55.8272 54.4172C55.1249 54.4172 54.5536 53.846 54.5536 53.1437C54.5536 52.4414 55.1249 51.8701 55.8272 51.8701C56.5295 51.8701 57.1001 52.4414 57.1001 53.1437C57.1001 53.846 56.5295 54.4172 55.8272 54.4172Z" fill="#7DB548"/>
                     </svg>
                 </i>
-                <div class="title">新しいサービスを開発したい</div>
-                <div class="item-desc">お客様のご要望に応じて、システム開発、ITツールの導入支援から、運用者様のリテラシー教育まで幅広く業務効率化を支援いたします。</div>
+                <div class="title">メンテナンス・サポート</div>
+                <div class="item-desc">当社のエンジニアはプロジェクト経験豊富で、各テクノロジーに対し深く理解、お客様に最適なサービスを提供しています。</div>
             </div>
         </div>
     </div>
@@ -221,30 +224,26 @@
 
 
 <section class="container block_03">
-    <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">ベトナム開発拠点のご紹介</div>
-    <p class="desc text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">NTQは技術に高い関心を持っています。CRAZY TEAMと呼ばれるR&D（技術研究開発）専門のチームを抱え、提供する3つのサービスを支えています。 将来を見通した技術に精通することで地盤から技術を固め、来るべき日に備え、お客様の思いの実現のために尽力します。</p>
+    <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">ソリューション</div>
+    <p class="desc text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600"></p>
     <div class="swiper_03" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
         <div class="swiper blockSwiper03">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <a href="#" class="img"><img src="./img/block_03_1.jpg" alt=""/></a>
-                    <a href="#" class="name">新しいサービスを開発したい</a>
-                    <p class="desc">お客様のご要望に応じて、システム開発、ITツールの導入支援から、運用者様のリテラシー教育まで幅広く業務効率化を支援いたします。</p>
+                    <a href="#" class="name">オフショア開発</a>
+                    <p class="desc">新規開発からプロジェクトの更新まで、お客様のご要望に応じて、様々なサービスパッケージを構築します。お客様は弊社のそれぞれサービスを利用することもできます。 
+                        NETKOは、拡張可能（Scalable), 柔軟（Agile), 信頼性（reliable）があり,ビジネスニーズに適応します。</p>
                 </div>
                 <div class="swiper-slide">
                     <a href="#" class="img"><img src="./img/block_03_2.jpg" alt=""/></a>
-                    <a href="#" class="name">新しいサービスを開発したい</a>
-                    <p class="desc">お客様のご要望に応じて、システム開発、ITツールの導入支援から、運用者様のリテラシー教育まで幅広く業務効率化を支援いたします。</p>
+                    <a href="#" class="name">オフショア開発 B-O-T</a>
+                    <p class="desc">最初から構築せずにベトナムでオフショア会社を所有したいという顧客の願望の場合、我々はビジネスニーズに基づいてオフショア開発会社を構築し、12〜18か月後に所有権を譲渡します。</p>
                 </div>
                 <div class="swiper-slide">
                     <a href="#" class="img"><img src="./img/block_03_3.jpg" alt=""/></a>
-                    <a href="#" class="name">新しいサービスを開発したい</a>
-                    <p class="desc">お客様のご要望に応じて、システム開発、ITツールの導入支援から、運用者様のリテラシー教育まで幅広く業務効率化を支援いたします。</p>
-                </div>
-                <div class="swiper-slide">
-                    <a href="#" class="img"><img src="./img/block_03_2.jpg" alt=""/></a>
-                    <a href="#" class="name">新しいサービスを開発したい</a>
-                    <p class="desc">お客様のご要望に応じて、システム開発、ITツールの導入支援から、運用者様のリテラシー教育まで幅広く業務効率化を支援いたします。</p>
+                    <a href="#" class="name">DXコンサル・DXサービス</a>
+                    <p class="desc">コンサルティング・サービスでは、各分野についての豊富なスキルや経験を持つプロフェッショナル及びコンサルタントがサポートさせていただきます。我々は企画、コンサルティングサービスからお客様の要件に応じてプロジェクトを開発するサービスまで提供し、顧客の「DXパートナー」となり、社会に新たな価値を届け続けます。</p>
                 </div>
             </div>
         </div>
@@ -261,14 +260,15 @@
             </svg>
         </div>
     </div>
-    <div class="text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
-        <a href="#" class="btn btn-light-secondary">開発事例をもっとみる...</a>
-    </div>
+    <!-- Hided by Hoang -->
+    <!-- <div class="text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
+        <a href="#" class="btn btn-light-secondary ">開発事例をもっとみる...</a>
+    </div> -->
 </section>
 
 <section class="container block_04">
-    <div class="block-title" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">ベトナム開発拠点のご紹介</div>
-    <p class="desc" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">NTQは技術に高い関心を持っています。CRAZY TEAMと呼ばれるR&D（技術研究開発）専門のチームを抱え、提供する3つのサービスを支えています。 将来を見通した技術に精通することで地盤から技術を固め、来るべき日に備え、お客様の思いの実現のために尽力します。</p>
+    <div class="block-title" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">テクノロジー</div>
+    <p class="desc" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">様々なテクノロジーは、製品の品質を向上させるために新しい方法で活用されています。</p>
     <div class="item-box">
         <div class="item" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
             <i class="icon">
@@ -391,7 +391,7 @@
 </section>
 
 <section class="container block_05">
-    <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">ベトナム開発拠点のご紹介</div>
+    <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">Case studies</div>
     <p class="desc text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">NTQは技術に高い関心を持っています。CRAZY TEAMと呼ばれるR&D（技術研究開発）専門のチームを抱え、提供する3つのサービスを支えています。 将来を見通した技術に精通することで地盤から技術を固め、来るべき日に備え、お客様の思いの実現のために尽力します。</p>
     <div class="item-box">
         <div class="col">
@@ -479,7 +479,7 @@
 </section>
 
 <section class="container block_06">
-    <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">ベトナム開発拠点のご紹介</div>
+    <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">Blogs</div>
     <div class="item-box">
         <div class="item" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
             <a href="#" class="img"><img src="./img/block_06_1.jpg" alt=""/></a>
@@ -512,7 +512,7 @@
 </section>
 
 <section class="container news">
-    <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">サービスを支える</div>
+    <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">News</div>
     <ul class="news-list" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
         <li>
             <div class="date">2021/10/10</div>
