Change content for homepage #3

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </i>
                 <div class="title">ソフトウェア開発</div>
                 <div class="item-desc">相手の会社のビジネス成長を支援することを究極の目標として、
-                    お客様のご要望にお応えするソフトウェア開発サービスを提供しています。。</div>
+                    お客様のご要望にお応えするソフトウェア開発サービスを提供しています。</div>
             </div>
             <div class="item" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
                 <i class="icon">
@@ -232,8 +232,8 @@
                 <div class="swiper-slide">
                     <a href="#" class="img"><img src="./img/block_03_1.jpg" alt=""/></a>
                     <a href="#" class="name">オフショア開発</a>
-                    <p class="desc">新規開発からプロジェクトの更新まで、お客様のご要望に応じて、様々なサービスパッケージを提供します。。お客様は弊社のそれぞれサービスを利用することもできます。 
-                        NETKOは、拡張可能（Scalable), 柔軟（Agile), 信頼性（reliable）があり,ビジネスニーズに適応します。</p>
+                    <p class="desc">新規開発からプロジェクトの更新まで、お客様のご要望に応じて、様々なサービスパッケージを提供します。お客様は弊社のそれぞれサービスを利用することもできます。 
+                        NETKOは、拡張可能（Scalable)、柔軟（Agile)、信頼性（reliable）があり、ビジネスニーズに適応します。</p>
                 </div>
                 <div class="swiper-slide">
                     <a href="#" class="img"><img src="./img/block_03_2.jpg" alt=""/></a>
