Change content for homepage #4

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <a href="#" class="img"><img src="./img/block_03_1.jpg" alt=""/></a>
                     <a href="#" class="name">オフショア開発</a>
                     <p class="desc">新規開発からプロジェクトの更新まで、お客様のご要望に応じて、様々なサービスパッケージを提供します。お客様は弊社のそれぞれサービスを利用することもできます。 
-                        NETKOは、拡張可能（Scalable)、柔軟（Agile)、信頼性（reliable）があり、ビジネスニーズに適応します。</p>
+                        NETKOは拡張可能（Scalable)、柔軟（Agile)、信頼性（reliable）があり、ビジネスニーズに適応します。</p>
                 </div>
                 <div class="swiper-slide">
                     <a href="#" class="img"><img src="./img/block_03_2.jpg" alt=""/></a>
