Add subtitle for homepage

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 <section class="container block_03">
     <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">ソリューション</div>
-    <p class="desc text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600"></p>
+    <p class="desc text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">NETKOはお客様の”足りない”を解決するために、ソリューションを提供します。</p>
     <div class="swiper_03" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
         <div class="swiper blockSwiper03">
             <div class="swiper-wrapper">
@@ -393,7 +393,8 @@
 
 <section class="container block_05">
     <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">Case studies</div>
-    <p class="desc text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">NTQは技術に高い関心を持っています。CRAZY TEAMと呼ばれるR&D（技術研究開発）専門のチームを抱え、提供する3つのサービスを支えています。 将来を見通した技術に精通することで地盤から技術を固め、来るべき日に備え、お客様の思いの実現のために尽力します。</p>
+    <p class="desc text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">NETKOの開発チームは技術力が高いだけではなく、仕事に熱心でお客様のサービス経験を満足させ、</br>
+        100% のお客様にリピートしていただいています。</p>
     <div class="item-box">
         <div class="col">
             <div class="item" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
