change content for about page

--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@
         <div class="block">
             <div class="block-title2">Vision</div>
             <div class="vision-content">
-                <p>主要なサポートデジタルトランスフォーメーションテクノロジー企業になる</p>
+                <p>技術力及び柔軟性を通じて社会に貢献し、世界的なリーダーテクノロジー企業になります。</p>
             </div>
         </div>
 
@@ -163,7 +163,7 @@
         </div>
 
         <div class="block">
-            <div class="block-title2">CoreValue</div>
+            <div class="block-title2">Core Values</div>
             <div class="value-content">
                 <p>創業から5年間以上に渡り、NETKOの成長と共に多くの困難を経験しましたが、お客様からの貴重なご支援や従業員の協力のお陰で、NETKOは様々な困難を乗り越えながらも順調に成長しております。</p>
                 <div class="item-box">
