Add content for about and solutions page

--- a/about.html
+++ b/about.html
@@ -133,9 +133,10 @@
             <div class="block-title2">ベトナム開発拠点のご紹介</div>
             <div class="ceo-content">
                 <div class="left">
-                    <p>創業から5年間以上に渡り、NETKOの成長と共に多くの困難を経験しましたが、お客様からの貴重なご支援や従業員の協力のお陰で、NETKOは様々な困難を乗り越えながらも順調に成長しております。</p>
-                    <p>まだ若い企業ですが、オフショア開発業界において長年の経験を持っており、大規模案件も多数担当する機会にも恵まれ、日本・ベトナム両国のIT市場から高く評価される企業になってきております。 お客様と従業員に幸せな体験を届けることが弊社の使命であり、NETKOは日々技術力・サービスの向上に努めて参ります。</p>
-                    <p>日本で長い間留学・駐在していた者として、IT市場を始め、他の分野にも展開し、お客様と日本・ベトナム経済のさらなる成長・発展へ貢献していきたいと思います。</p>
+                    <p>110％能力でいつも心掛けるチームと一緒に仕事をすることができて幸運です。新型コロナウイルス感染拡大でも、NETKOの全員は顧客の最善の利益の追求のために高度的な決心として取り組んでいます。開発チームがソフトウェアと共に営業に関する問題を解決して、
+                        自分の時間を犠牲にして仕事に専念する時もあって誠にありがとうございました。より豊かで持続可能な世界を一生に築きましょう。</p>
+                    <p>最も重要なことは、お世話になったお客様に深く感謝しています。お客様は私たちを刺激し、激励するので、お客様の事を第一に考え、
+                        毎日全力を尽くしています。お客様から信頼していただき大変嬉しくありがとうございます。</p>
                     <div class="info">
                         <label>株式会社NETKO CEO</label>
                         <strong>Hoang Giang Bien - カタカナ</strong>
