--- a/solutions.html
+++ b/solutions.html
@@ -116,8 +116,8 @@
 </section>
 
 <section class="container value-content value-2">
-    <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">ベトナム開発拠点のご紹介FAQ</div>
-    <p class="desc text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">様々なテクノロジーは、製品の品質を向上させるために新しい方法で活用されています。</p>
+    <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">問題がありますか。</div>
+    <!-- <p class="desc text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">様々なテクノロジーは、製品の品質を向上させるために新しい方法で活用されています。</p> -->
     <div class="item-box">
         <div class="item" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
             <i class="icon">
@@ -136,8 +136,8 @@
                     </defs>
                 </svg>
             </i>
-            <div class="name">新しいサービスを開発したい</div>
-            <p>お客様のご要望に応じて、システム開発、ITツールの導入支援から、運用者様のリテラシー教育まで幅広く業務効率化を支援いたします。</p>
+            <div class="name">IT人材の「量」今もこれからも不足</div>
+            <p>少子高齢化が進む中、 IT 分野では、需要構造が変化し、人材に求められるスキルや能力が変化するため、需要構造に対応した IT 人材を確保していくことが求められています。</p>
         </div>
         <div class="item" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
             <i class="icon">
@@ -156,8 +156,9 @@
                     </defs>
                 </svg>
             </i>
-            <div class="name">新しいサービスを開発したい</div>
-            <p>お客様のご要望に応じて、システム開発、ITツールの導入支援から、運用者様のリテラシー教育まで幅広く業務効率化を支援いたします。</p>
+            <div class="name">IT人材の「質」が問われる</div>
+            <p>人材の質も不足していることが「IT人材白書2020」で指摘されました。ユーザー企業を対象とした調査で、2016年度調査から2018年度調査までIT人材の“質”が「大幅に不足している」
+                割合が33％前後だったが、2019年度調査では39.5％となる変化が見られました。</p>
         </div>
         <div class="item" data-aos="fade-up" data-aos-delay="600" data-aos-duration="600">
             <i class="icon">
@@ -176,8 +177,9 @@
                     </defs>
                 </svg>
             </i>
-            <div class="name">新しいサービスを開発したい</div>
-            <p>お客様のご要望に応じて、システム開発、ITツールの導入支援から、運用者様のリテラシー教育まで幅広く業務効率化を支援いたします。</p>
+            <div class="name">高価な開発費</div>
+            <p>日本のITコストというと機器の導入時にかかるコストを一番に考えるかもしれませんが、運用時にも費用は発生します。
+                機器のコストだけでなく、人件費などの管理コストも高いです。</p>
         </div>
     </div>
 </section>
@@ -185,30 +187,29 @@
 <section class="block_solution">
     <div class="item" style="background: url('./img/solution_01.jpg') no-repeat center center; background-size: cover;" data-aos="fade-left" data-aos-delay="200" data-aos-duration="600">
         <div class="content">
-            <div class="desc">提供する3つ</div>
-            <div class="name">業務を効率化したい</div>
+            <div class="desc">解決</div>
+            <div class="name">オフショア開発</div>
             <a href="#" class="btn btn-outline-white">続きを見る</a>
         </div>
     </div>
     <div class="item" style="background: url('./img/solution_02.jpg') no-repeat center center; background-size: cover;" data-aos="fade-left" data-aos-delay="400" data-aos-duration="600">
         <div class="content">
-            <div class="desc">提供する3つ</div>
-            <div class="name">業務を効率化したい</div>
+            <div class="desc">解決</div>
+            <div class="name">オフショア開発 B-O-T</div>
             <a href="#" class="btn btn-outline-white">続きを見る</a>
         </div>
     </div>
     <div class="item" style="background: url('./img/solution_03.jpg') no-repeat center center; background-size: cover;" data-aos="fade-left" data-aos-delay="600" data-aos-duration="600">
         <div class="content">
-            <div class="desc">提供する3つ</div>
-            <div class="name">業務を効率化したい</div>
+            <div class="desc">解決</div>
+            <div class="name">DXコンサル・DXサービス</div>
             <a href="#" class="btn btn-outline-white">続きを見る</a>
         </div>
     </div>
 </section>
 
 <section class="block_faqs">
-    <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">ベトナム開発拠点のご紹介FAQ</div>
-    <p class="desc text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">様々なテクノロジーは、製品の品質を向上させるために新しい方法で活用されています。</p>
+    <div class="block-title text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">FAQ</div>
     <div class="content">
         <div class="col" data-aos="fade-right" data-aos-delay="200" data-aos-duration="600">
             <img src="img/faq.jpg" alt=""/>
@@ -218,70 +219,79 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOneFaqs">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOneFaqs" aria-expanded="true" aria-controls="collapseOne">
-                            ベトナム開発拠点のご紹介?
+                            休日はどうなっているのか？
                         </button>
                     </h2>
                     <div id="collapseOneFaqs" class="accordion-collapse collapse show" aria-labelledby="headingOneFaqs" data-bs-parent="#accordionFaqs">
                         <div class="accordion-body">
-                            <p>まだ若い企業ですが、オフショア開発業界において長年の経験を持っており、大規模案件も多数担当する機会にも恵まれ、日本・ベトナム両国のIT市場から高く評価される企業になってきております。
-                                お客様と従業員に幸せな体験を届けることが弊社の使命であり、Dehaは日々技術力・サービスの向上に努めて参ります。</p>
-                            <p>創業から5年間以上に渡り、Dehaの成長と共に多くの困難を経験しましたが、お客様からの貴重なご支援や従業員の協力のお陰で、Dehaは様々な困難を乗り越えながらも順調に成長しております。</p>
+                            <p>通常は、土日とベトナムの祝日が休みとなります。2月のテト休暇といわれる旧正月の5日程度の長期休暇がありますが、祝日は年間10日程度です。
+                                日本の祝日は原則出勤日となるため、日本の祝日を有効に活用いただいて業務を進めて頂くことが可能です。</p>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwoFaqs">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwoFaqs" aria-expanded="false" aria-controls="collapseTwo">
-                            ベトナム開発拠ナム開発拠点のご紹介?
+                            必要な時には残業してもらえるのか？
                         </button>
                     </h2>
                     <div id="collapseTwoFaqs" class="accordion-collapse collapse" aria-labelledby="headingTwoFaqs" data-bs-parent="#accordionFaqs">
                         <div class="accordion-body">
-                            <p>まだ若い企業ですが、オフショア開発業界において長年の経験を持っており、大規模案件も多数担当する機会にも恵まれ、日本・ベトナム両国のIT市場から高く評価される企業になってきております。
-                                お客様と従業員に幸せな体験を届けることが弊社の使命であり、Dehaは日々技術力・サービスの向上に努めて参ります。</p>
-                            <p>創業から5年間以上に渡り、Dehaの成長と共に多くの困難を経験しましたが、お客様からの貴重なご支援や従業員の協力のお陰で、Dehaは様々な困難を乗り越えながらも順調に成長しております。</p>
+                            <p>必要であれば、ベトナムの法令の範囲内で可能です。詳細は別途ご説明させて頂きます。</p>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingThreeFaqs">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThreeFaqs" aria-expanded="false" aria-controls="collapseThree">
-                            ベトナム開発拠点のご紹介ベトナム開発拠点のご紹介?
+                            必要であれば、開発チームは当社（お客様先）に在籍出向してもよろしいでしょうか？
                         </button>
                     </h2>
                     <div id="collapseThreeFaqs" class="accordion-collapse collapse" aria-labelledby="headingThreeFaqs" data-bs-parent="#accordionFaqs">
                         <div class="accordion-body">
-                            <p>まだ若い企業ですが、オフショア開発業界において長年の経験を持っており、大規模案件も多数担当する機会にも恵まれ、日本・ベトナム両国のIT市場から高く評価される企業になってきております。
-                                お客様と従業員に幸せな体験を届けることが弊社の使命であり、Dehaは日々技術力・サービスの向上に努めて参ります。</p>
-                            <p>創業から5年間以上に渡り、Dehaの成長と共に多くの困難を経験しましたが、お客様からの貴重なご支援や従業員の協力のお陰で、Dehaは様々な困難を乗り越えながらも順調に成長しております。</p>
+                            <p>お客様の多様なニーズに対応する為にオンサイト開発サービスを提供しています。開発者がお客様先に常駐して、お客の希望に合わせ対応いたします。
+                                N3以上の日本語能力及びプロジェクトのニーズを満たす技術力を持ち、厳選されたエンジニアです</p>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingFourFaqs">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFourFaqs" aria-expanded="false" aria-controls="collapseFour">
-                            ベトナ点のご紹介ベトナム開発拠点のご紹介?
+                            般的に契約の種類・形態？
                         </button>
                     </h2>
                     <div id="collapseFourFaqs" class="accordion-collapse collapse" aria-labelledby="headingFourFaqs" data-bs-parent="#accordionFaqs">
                         <div class="accordion-body">
-                            <p>まだ若い企業ですが、オフショア開発業界において長年の経験を持っており、大規模案件も多数担当する機会にも恵まれ、日本・ベトナム両国のIT市場から高く評価される企業になってきております。
-                                お客様と従業員に幸せな体験を届けることが弊社の使命であり、Dehaは日々技術力・サービスの向上に努めて参ります。</p>
-                            <p>創業から5年間以上に渡り、Dehaの成長と共に多くの困難を経験しましたが、お客様からの貴重なご支援や従業員の協力のお陰で、Dehaは様々な困難を乗り越えながらも順調に成長しております。</p>
+                            <p>オフショア開発における契約形態は受託開発契約・ラボ型開発契約・オンサイト開発契約が一般的で、Netkoは上記の3つの契約種類を提供しています。
+                                ご利用のサービスとソフトウェア開発の工程に合わせてお勧め致します。詳しくはhttps://…をご覧ください。</p>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingFiveFaqs">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFiveFaqs" aria-expanded="false" aria-controls="collapseFive">
-                            ベトナム開発拠点のご紹介?
+                            アイデアを実現する為に開発チームとコミュニケーションをできれば最高と思います。
                         </button>
                     </h2>
                     <div id="collapseFiveFaqs" class="accordion-collapse collapse" aria-labelledby="headingFiveFaqs" data-bs-parent="#accordionFaqs">
                         <div class="accordion-body">
-                            <p>まだ若い企業ですが、オフショア開発業界において長年の経験を持っており、大規模案件も多数担当する機会にも恵まれ、日本・ベトナム両国のIT市場から高く評価される企業になってきております。
-                                お客様と従業員に幸せな体験を届けることが弊社の使命であり、Dehaは日々技術力・サービスの向上に努めて参ります。</p>
-                            <p>創業から5年間以上に渡り、Dehaの成長と共に多くの困難を経験しましたが、お客様からの貴重なご支援や従業員の協力のお陰で、Dehaは様々な困難を乗り越えながらも順調に成長しております。</p>
+                            <p>テクノロジーを通じてお客様のアイデアを実現することに一部貢献して光栄に思います。 
+                                NETKOでは、コミュニケーター、BrSE、プロダクトオーナーがN2以上の日本語能力を持ち、ビジネス分野に関連する日本及びベトナムの大学を卒業しました。 
+                                N4以上の日本語能力及び良英語能力を持ち開発者は、顧客の要件を明確に理解することを保証します。</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFiveFaqs">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFiveFaqs" aria-expanded="false" aria-controls="collapseFive">
+                            自社にプログラムに詳しいメンバーがいないのですが、それでも大丈夫でしょうか？
+                        </button>
+                    </h2>
+                    <div id="collapseFiveFaqs" class="accordion-collapse collapse" aria-labelledby="headingFiveFaqs" data-bs-parent="#accordionFaqs">
+                        <div class="accordion-body">
+                            <p>問題ございません。弊社の社内エンジニアがクライアント様のご要望を詳細にヒアリングした上で、
+                                要件定義・設計を実施させて頂きます。また、進行中にはチームリーダーによる週次の進捗確認を実施致して、
+                                客様に毎日報告するので、プログラムがわからないことで進捗が追えなくなることはございません。</p>
                         </div>
                     </div>
                 </div>
