Add content for about page

--- a/about.html
+++ b/about.html
@@ -233,26 +233,26 @@
             <div class="block-title2">アジアを代表するデCompanyInfo</div>
             <div class="company-content">
                 <div class="left">
-                    <div class="name">NETKO .JSC</div>
+                    <div class="name">NETKO Solution .JSC</div>
                     <div class="info-box">
                         <label>CEO</label>
                         <div class="text">Hoang Giang Bien - カタカナ</div>
                     </div>
                     <div class="info-box">
                         <label>ハノイ本社</label>
-                        <div class="text">5th Floor, Intracom Building,82 Dich Vong Hau St., Cau Giay, Hanoi</div>
+                        <div class="text">5th floor, NIC building, no 7 Ton that Thuyet St., Cau Giay, Hanoi, Vietnam</div>
                     </div>
                     <div class="info-box">
                         <label>社員数</label>
-                        <div class="text">185人（2020年11月現在）</div>
+                        <div class="text">10人（2021年10月現在）</div>
                     </div>
                     <div class="info-box">
                         <label>電話</label>
-                        <div class="text">(+81)45-228-9010（営業部） - (+81)45-620-3807（代表）</div>
+                        <div class="text">(+84)359-612-999</div>
                     </div>
                     <div class="info-box">
-                        <label>FAX</label>
-                        <div class="text">(+81)45-620-3804</div>
+                        <label>Email</label>
+                        <div class="text">contact@netko-solution.com</div>
                     </div>
                 </div>
                 <div class="img">
