--- a/solutions.html
+++ b/solutions.html
@@ -282,12 +282,12 @@
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingFiveFaqs">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFiveFaqs" aria-expanded="false" aria-controls="collapseFive">
+                    <h2 class="accordion-header" id="headingSixFaqs">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSixFaqs" aria-expanded="false" aria-controls="collapseSix">
                             自社にプログラムに詳しいメンバーがいないのですが、それでも大丈夫でしょうか？
                         </button>
                     </h2>
-                    <div id="collapseFiveFaqs" class="accordion-collapse collapse" aria-labelledby="headingFiveFaqs" data-bs-parent="#accordionFaqs">
+                    <div id="collapseSixFaqs" class="accordion-collapse collapse" aria-labelledby="headingSixFaqs" data-bs-parent="#accordionFaqs">
                         <div class="accordion-body">
                             <p>問題ございません。弊社の社内エンジニアがクライアント様のご要望を詳細にヒアリングした上で、
                                 要件定義・設計を実施させて頂きます。また、進行中にはチームリーダーによる週次の進捗確認を実施致して、
